k8s/vue/vue-traefik-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-traefik-ssl
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vue.tsadimas.dns-cloud.net
      # Cert-manager will create this secret automatically containing the cert
      secretName: vue-prod-tls
  rules:
  - host: "vue.tsadimas.dns-cloud.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-svc
            port:
              name: vue
