k8s/vue/vue-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: "vue.tsadimas.dns-cloud.net"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vue-svc
            port:
              name: vue
